[metadata]
name = random-forest-dkpingi
version = 0.0.1
author = Danny Pingitzer
author_email = dapingitzer@gmail.com
description = A random forest model implemented from scratch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Dkpingi/Random_Forest_from_scratch
project_urls =
    Bug Tracker = https://github.com/Dkpingi/Random_Forest_from_scratch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
